tests/ui/issues/issue-28344.stderr
warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-28344.rs:4:17
   |
LL |     let x: u8 = BitXor::bitor(0 as u8, 0 as u8);
   |                 ^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: `#[warn(bare_trait_objects)]` (part of `#[warn(rust_2021_compatibility)]`) on by default
help: if this is a dyn-compatible trait, use `dyn`
   |
LL |     let x: u8 = <dyn BitXor>::bitor(0 as u8, 0 as u8);
   |                 ++++       +

error[E0191]: the value of the associated type `Output` in `BitXor<_>` must be specified
  --> $DIR/issue-28344.rs:4:17
   |
LL |     let x: u8 = BitXor::bitor(0 as u8, 0 as u8);
   |                 ^^^^^^ help: specify the associated type: `BitXor::<Output = Type>`

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-28344.rs:9:13
   |
LL |     let g = BitXor::bitor;
   |             ^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
help: if this is a dyn-compatible trait, use `dyn`
   |
LL |     let g = <dyn BitXor>::bitor;
   |             ++++       +

error[E0191]: the value of the associated type `Output` in `BitXor<_>` must be specified
  --> $DIR/issue-28344.rs:9:13
   |
LL |     let g = BitXor::bitor;
   |             ^^^^^^ help: specify the associated type: `BitXor::<Output = Type>`

error: aborting due to 2 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0191`.
